tests/NormalTests/paczka1/fuzzy1/29152116.err
Error in line 12: FWXaVeIv S340 62,29
Error in line 30: jLpoKfs S933 15,2
Error in line 34: AjU2Me S933 91,3
Error in line 38: AjU2Me A153 4,7
